[package]
name = "rust-dds"
version = "0.1.0"
edition = "2021"
description = "rust-DDS: Rust library for DDS (Data Distribution Service) publish/subscribe — RELAY conformant."
license = "MPL-2.0"
repository = "https://github.com/SoundMatt/rust-DDS"
homepage = "https://github.com/SoundMatt/rust-DDS"
keywords = ["dds", "pubsub", "automotive", "embedded", "relay"]
categories = ["embedded", "network-programming", "asynchronous"]
rust-version = "1.75"

[lib]
name = "rust_dds"
path = "src/lib.rs"

[[bin]]
name = "rust-dds"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
